Improve error handling for Missing Connectivity Proxy information (#359)
Co-authored-by: Johannes Schneider <johannes.schneider03@sap.com>